--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -107,6 +107,9 @@ menu,
 nav,
 section {
 	display: block;
+	margin: 2em;
+	margin-top: 0;
+	border-radius: 3em;
 }
 
 body {
@@ -211,7 +214,7 @@ body,
 input,
 select,
 textarea {
-	color: rgba(255, 255, 255, 0.55);
+	color: rgba(255, 255, 255, 1);
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 16.5pt;
 	font-weight: normal;
@@ -1949,8 +1952,8 @@ button,
 	-ms-transition: border-color 0.2s ease;
 	transition: border-color 0.2s ease;
 	background-color: transparent;
-	border: solid 1px !important;
-	border-color: rgba(255, 255, 255, 0.15) !important;
+	border: solid 2px !important;
+	border-color: #fff !important;
 	border-radius: 3em;
 	color: #ffffff !important;
 	cursor: pointer;
@@ -1967,6 +1970,8 @@ button,
 	text-decoration: none;
 	text-transform: uppercase;
 	white-space: nowrap;
+	position: absolute;
+	right: 0;
 }
 
 input[type="submit"]:after,
@@ -2064,6 +2069,7 @@ input[type="button"]:hover,
 button:hover,
 .button:hover {
 	border-color: rgba(255, 255, 255, 0.55) !important;
+	background-color: #2fa499;
 }
 
 input[type="submit"]:hover:after,
@@ -2092,250 +2098,6 @@ input[type="button"]:hover:active:after,
 button:hover:active:after,
 .button:hover:active:after {
 	opacity: 0.1;
-}
-
-/* Features */
-
-.features {
-	display: -moz-flex;
-	display: -webkit-flex;
-	display: -ms-flex;
-	display: flex;
-	-moz-flex-wrap: wrap;
-	-webkit-flex-wrap: wrap;
-	-ms-flex-wrap: wrap;
-	flex-wrap: wrap;
-	border-radius: 0.25em;
-	border: solid 1px rgba(255, 255, 255, 0.15);
-	background: rgba(255, 255, 255, 0.05);
-	margin: 0 0 2em 0;
-}
-
-.features section {
-	padding: 3.5em 3em 1em 7em;
-	width: 50%;
-	border-top: solid 1px rgba(255, 255, 255, 0.15);
-	position: relative;
-}
-
-.features section:nth-child(-n + 2) {
-	border-top-width: 0;
-}
-
-.features section:nth-child(2n) {
-	border-left: solid 1px rgba(255, 255, 255, 0.15);
-}
-
-.features section .icon {
-	-moz-transition: opacity 0.5s ease, -moz-transform 0.5s ease;
-	-webkit-transition: opacity 0.5s ease, -webkit-transform 0.5s ease;
-	-ms-transition: opacity 0.5s ease, -ms-transform 0.5s ease;
-	transition: opacity 0.5s ease, transform 0.5s ease;
-	-moz-transition-delay: 1s;
-	-webkit-transition-delay: 1s;
-	-ms-transition-delay: 1s;
-	transition-delay: 1s;
-	-moz-transform: scale(1);
-	-webkit-transform: scale(1);
-	-ms-transform: scale(1);
-	transform: scale(1);
-	position: absolute;
-	left: 3em;
-	top: 3em;
-	opacity: 1;
-}
-
-.features section:nth-child(1) .icon {
-	-moz-transition-delay: 0.15s;
-	-webkit-transition-delay: 0.15s;
-	-ms-transition-delay: 0.15s;
-	transition-delay: 0.15s;
-}
-
-.features section:nth-child(2) .icon {
-	-moz-transition-delay: 0.3s;
-	-webkit-transition-delay: 0.3s;
-	-ms-transition-delay: 0.3s;
-	transition-delay: 0.3s;
-}
-
-.features section:nth-child(3) .icon {
-	-moz-transition-delay: 0.45s;
-	-webkit-transition-delay: 0.45s;
-	-ms-transition-delay: 0.45s;
-	transition-delay: 0.45s;
-}
-
-.features section:nth-child(4) .icon {
-	-moz-transition-delay: 0.6s;
-	-webkit-transition-delay: 0.6s;
-	-ms-transition-delay: 0.6s;
-	transition-delay: 0.6s;
-}
-
-.features section:nth-child(5) .icon {
-	-moz-transition-delay: 0.75s;
-	-webkit-transition-delay: 0.75s;
-	-ms-transition-delay: 0.75s;
-	transition-delay: 0.75s;
-}
-
-.features section:nth-child(6) .icon {
-	-moz-transition-delay: 0.9s;
-	-webkit-transition-delay: 0.9s;
-	-ms-transition-delay: 0.9s;
-	transition-delay: 0.9s;
-}
-
-.features section:nth-child(7) .icon {
-	-moz-transition-delay: 1.05s;
-	-webkit-transition-delay: 1.05s;
-	-ms-transition-delay: 1.05s;
-	transition-delay: 1.05s;
-}
-
-.features section:nth-child(8) .icon {
-	-moz-transition-delay: 1.2s;
-	-webkit-transition-delay: 1.2s;
-	-ms-transition-delay: 1.2s;
-	transition-delay: 1.2s;
-}
-
-.features section:nth-child(9) .icon {
-	-moz-transition-delay: 1.35s;
-	-webkit-transition-delay: 1.35s;
-	-ms-transition-delay: 1.35s;
-	transition-delay: 1.35s;
-}
-
-.features section:nth-child(10) .icon {
-	-moz-transition-delay: 1.5s;
-	-webkit-transition-delay: 1.5s;
-	-ms-transition-delay: 1.5s;
-	transition-delay: 1.5s;
-}
-
-.features section:nth-child(11) .icon {
-	-moz-transition-delay: 1.65s;
-	-webkit-transition-delay: 1.65s;
-	-ms-transition-delay: 1.65s;
-	transition-delay: 1.65s;
-}
-
-.features section:nth-child(12) .icon {
-	-moz-transition-delay: 1.8s;
-	-webkit-transition-delay: 1.8s;
-	-ms-transition-delay: 1.8s;
-	transition-delay: 1.8s;
-}
-
-.features section:nth-child(13) .icon {
-	-moz-transition-delay: 1.95s;
-	-webkit-transition-delay: 1.95s;
-	-ms-transition-delay: 1.95s;
-	transition-delay: 1.95s;
-}
-
-.features section:nth-child(14) .icon {
-	-moz-transition-delay: 2.1s;
-	-webkit-transition-delay: 2.1s;
-	-ms-transition-delay: 2.1s;
-	transition-delay: 2.1s;
-}
-
-.features section:nth-child(15) .icon {
-	-moz-transition-delay: 2.25s;
-	-webkit-transition-delay: 2.25s;
-	-ms-transition-delay: 2.25s;
-	transition-delay: 2.25s;
-}
-
-.features section:nth-child(16) .icon {
-	-moz-transition-delay: 2.4s;
-	-webkit-transition-delay: 2.4s;
-	-ms-transition-delay: 2.4s;
-	transition-delay: 2.4s;
-}
-
-.features section:nth-child(17) .icon {
-	-moz-transition-delay: 2.55s;
-	-webkit-transition-delay: 2.55s;
-	-ms-transition-delay: 2.55s;
-	transition-delay: 2.55s;
-}
-
-.features section:nth-child(18) .icon {
-	-moz-transition-delay: 2.7s;
-	-webkit-transition-delay: 2.7s;
-	-ms-transition-delay: 2.7s;
-	transition-delay: 2.7s;
-}
-
-.features section:nth-child(19) .icon {
-	-moz-transition-delay: 2.85s;
-	-webkit-transition-delay: 2.85s;
-	-ms-transition-delay: 2.85s;
-	transition-delay: 2.85s;
-}
-
-.features section:nth-child(20) .icon {
-	-moz-transition-delay: 3s;
-	-webkit-transition-delay: 3s;
-	-ms-transition-delay: 3s;
-	transition-delay: 3s;
-}
-
-.features.inactive section .icon {
-	-moz-transform: scale(0.5);
-	-webkit-transform: scale(0.5);
-	-ms-transform: scale(0.5);
-	transform: scale(0.5);
-	opacity: 0;
-}
-
-@media screen and (max-width: 980px) {
-
-	.features {
-		display: block;
-	}
-
-	.features section {
-		border-top-width: 1px !important;
-		border-left-width: 0 !important;
-		width: 100%;
-	}
-
-	.features section:first-child {
-		border-top-width: 0 !important;
-	}
-
-}
-
-@media screen and (max-width: 736px) {
-
-	.features section {
-		padding: 2.5em 1.5em 0.1em 5.5em;
-	}
-
-	.features section .icon {
-		left: 1.5em;
-		top: 2em;
-	}
-
-}
-
-@media screen and (max-width: 480px) {
-
-	.features section {
-		padding: 2em 1.5em 0.1em 1.5em;
-	}
-
-	.features section .icon {
-		left: 0;
-		position: relative;
-		top: 0;
-	}
-
 }
 
 /* Form */
@@ -3119,7 +2881,7 @@ header h6+p {
 	-webkit-flex-direction: row;
 	-ms-flex-direction: row;
 	flex-direction: row;
-	min-height: 22.5em;
+	min-height: 20em;
 }
 
 body.is-ie .spotlights>section {
@@ -3136,8 +2898,13 @@ body.is-ie .spotlights>section {
 }
 
 .spotlights>section>.image img {
-	border-radius: 0;
+	border-top-left-radius: 1.75em;
+	border-bottom-left-radius: 1.75em;
+	border-top-right-radius: 0;
+	border-bottom-right-radius: 0;
 	display: block;
+	height: 25em;
+	width: 25em;
 }
 
 .spotlights>section>.image:before {
@@ -3172,6 +2939,8 @@ body.is-ie .spotlights>section {
 	justify-content: center;
 	width: 50em;
 	-ms-flex: 1;
+	margin-top: -3em;
+	margin-right: -2em;
 }
 
 .spotlights>section>.content>.inner {
@@ -3186,12 +2955,11 @@ body.is-ie .spotlights>section {
 	opacity: 1;
 }
 
-.spotlights>section:nth-child(2) {
-	background-color: rgba(0, 0, 0, 0.05);
-}
-
-.spotlights>section:nth-child(3) {
+.spotlights>section {
 	background-color: rgba(0, 0, 0, 0.1);
+	border: 2px solid #fff;
+	border-top-left-radius: 2em;
+	border-bottom-left-radius: 2em;
 }
 
 .spotlights>section.inactive>.image:before,
@@ -3206,6 +2974,14 @@ body.is-preload .spotlights>section>.content>.inner {
 	-ms-transform: translateX(-1em);
 	transform: translateX(-1em);
 	opacity: 0;
+}
+
+.project-subtitle {
+	font-size: 11;
+	color: #ffffffb4;
+	font-style: italic;
+	margin-top: -1em;
+	margin-bottom: -1em;
 }
 
 @media screen and (max-width: 1680px) {
@@ -3326,6 +3102,7 @@ table.alt tfoot {
 
 .wrapper {
 	position: relative;
+	padding-bottom: 2em;
 }
 
 .wrapper>.inner {
@@ -3860,7 +3637,7 @@ body.is-ie #sidebar>.inner {
 	-ms-transition: color 0.2s ease;
 	transition: color 0.2s ease;
 	border: 0;
-	color: rgba(255, 255, 255, 0.35);
+	color: rgb(255, 255, 255);
 	display: block;
 	font-size: 0.6em;
 	font-weight: bold;
@@ -3901,7 +3678,7 @@ body.is-ie #sidebar>.inner {
 }
 
 #sidebar nav a:hover {
-	color: rgba(255, 255, 255, 0.55);
+	color: rgba(0, 255, 247, 0.854);
 }
 
 #sidebar nav a.active {
@@ -3994,6 +3771,46 @@ body.is-preload #sidebar nav ul li {
 
 }
 
+/* Profile image */
+.profile_image {
+	overflow: hidden;
+	width: 12em;
+	height: 12em;
+	border-radius: 50%;
+	margin: 0 auto;
+	margin-bottom: 1em;
+}
+
+.profile_image img {
+	display: block;
+	width: 100%;
+	height: auto;
+}
+
+/* Social media icons */
+.socialmedia_actions {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-top: 1em;
+	margin-bottom: 1em;
+	font-size: 2em;
+}
+
+.socialmedia_actions a:hover {
+	color: rgba(0, 255, 247, 0.854);
+}
+
+.socialmedia_actions li a {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 30px;
+	height: 30px;
+	border-radius: 50%;
+	transition: background-color 0.2s ease;
+}
+
 /* Intro */
 
 #intro {
@@ -4030,4 +3847,199 @@ body.is-preload #sidebar nav ul li {
 		background-attachment: scroll;
 	}
 
+}
+
+/* Custom header for section Project section */
+.project-header {
+	margin-bottom: -2em;
+}
+
+/* Work experience */
+.timeline-centered {
+	position: relative;
+	margin-bottom: 30px;
+}
+
+.timeline-centered:before,
+.timeline-centered:after {
+	content: " ";
+	display: table;
+}
+
+.timeline-centered:after {
+	clear: both;
+}
+
+.timeline-centered:before,
+.timeline-centered:after {
+	content: " ";
+	display: table;
+}
+
+.timeline-centered:after {
+	clear: both;
+}
+
+.timeline-centered:before {
+	content: "";
+	position: absolute;
+	display: block;
+	width: 4px;
+	background: #fff;
+	top: 20px;
+	bottom: 20px;
+	margin-left: 29px;
+}
+
+.timeline-centered .timeline-entry {
+	position: relative;
+	margin-top: 5px;
+	margin-left: 30px;
+	margin-bottom: 10px;
+	clear: both;
+}
+
+.timeline-centered .timeline-entry .timeline-entry-inner {
+	position: relative;
+	margin-left: -20px;
+}
+
+.timeline-centered .timeline-entry .timeline-entry-inner .timeline-icon {
+	display: block;
+	width: 40px;
+	height: 40px;
+	background: #2c98f0;
+	-webkit-border-radius: 50%;
+	-moz-border-radius: 50%;
+	-ms-border-radius: 50%;
+	border-radius: 50%;
+	text-align: center;
+	-moz-box-shadow: 0 0 0 5px #f2f3f7;
+	-webkit-box-shadow: 0 0 0 5px #f2f3f7;
+	box-shadow: 0 0 0 5px #f2f3f7;
+	line-height: 40px;
+	float: left;
+}
+
+.timeline-centered .timeline-entry .timeline-entry-inner .timeline-icon.color-2 {
+	background: rgb(0, 195, 189);
+	color: white;
+}
+
+.timeline-centered .timeline-entry .timeline-entry-inner .timeline-icon.color-3 {
+	background: #f9bf3f;
+}
+
+.timeline-centered .timeline-entry .timeline-entry-inner .timeline-icon.color-4 {
+	background: #a84cb8;
+}
+
+.timeline-centered .timeline-entry .timeline-entry-inner .timeline-icon.color-5 {
+	background: #2fa499;
+}
+
+.timeline-centered .timeline-entry .timeline-entry-inner .timeline-icon.color-none {
+	background: #fff;
+	width: 20px;
+	height: 20px;
+	margin-left: 10px;
+}
+
+.timeline-centered .timeline-entry .timeline-entry-inner .timeline-label {
+	position: relative;
+	background: #015e653c;
+	color: #fff;
+	padding: 1.5em;
+	margin-left: 60px;
+	-webkit-background-clip: padding-box;
+	-moz-background-clip: padding;
+	background-clip: padding-box;
+	border-radius: 1em;
+}
+
+.timeline-centered .timeline-entry .timeline-entry-inner .timeline-label:after {
+	content: "";
+	display: block;
+	position: absolute;
+	width: 0;
+	height: 0;
+	border-style: solid;
+	border-width: 9px 9px 9px 0;
+	border-color: transparent #f2f3f7 transparent transparent;
+	left: 0;
+	top: 10px;
+	margin-left: -9px;
+}
+
+.timeline-centered .timeline-entry .timeline-entry-inner .timeline-label p+p {
+	margin-top: 0px;
+}
+
+.timeline-centered .timeline-entry .timeline-entry-inner .timeline-label h2 {
+	margin-bottom: 10px;
+	font-size: 20px;
+	font-weight: 500;
+}
+
+.job-header {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.job-company {
+	font-weight: 600;
+	font-size: 24px;
+	margin-top: 0;
+	color: rgba(0, 255, 247, 0.854);
+	text-align: left;
+}
+
+.job-location {
+	font-weight: 600;
+	font-size: 16px;
+	display: inline-block;
+	margin-top: auto;
+	text-align: center;
+}
+
+
+.job-duration {
+	font-weight: 600;
+	font-size: 16px;
+	display: inline-block;
+	margin-top: auto;
+	text-align: right;
+}
+
+.job-title {
+	font-weight: 600;
+	font-size: 20px;
+}
+
+.timeline-centered .timeline-entry .timeline-entry-inner .timeline-label .timeline-text {
+	margin-bottom: 0px;
+	font-size: 13px;
+}
+
+.timeline-centered .timeline-entry .timeline-entry-inner .timeline-label div {
+	margin-top: 5px;
+}
+
+.timeline-entry {
+	margin-right: -2em;
+}
+
+.badge-secondary {
+	display: inline-block;
+	padding: 0.25rem 0.5rem;
+	font-size: 75%;
+	font-weight: 700;
+	line-height: 1;
+	text-align: center;
+	white-space: nowrap;
+	vertical-align: baseline;
+	border-radius: 0.25rem;
+	color: #fff;
+	background-color: #dc3545;
 }
