--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3415,21 +3415,13 @@ body.is-preload .wrapper.fade>.inner {
 
 }
 
-#footer>.inner a {
-	border-bottom-color: rgba(255, 255, 255, 0.15);
-}
-
-#footer>.inner a:hover {
-	border-bottom-color: transparent;
-}
-
-#footer>.inner .menu {
-	font-size: 0.8em;
-	color: rgba(255, 255, 255, 0.15);
-}
-
 #header+#wrapper+#footer>.inner {
 	margin: 0 auto;
+}
+
+footer {
+	color: #ffffff53;
+	text-align: right;
 }
 
 /* Sidebar */
